fixed navbar spacing

--- a/public/Navbar/navbar.css
+++ b/public/Navbar/navbar.css
@@ -226,7 +226,7 @@ nav{
         justify-content: center;
     }
     .show-tooltip-desktop{
-        height: 200px;
+        height: 230px;
         padding: 1rem;
         overflow: hidden;
     }
